AC_INIT(oclvp, 0.0.0, mkyas@users.berlios.de)
AC_CONFIG_SRCDIR()
AM_INIT_AUTOMAKE
AC_PROG_MAKE_SET
AC_PROG_LN_S
AC_PATH_PROG([M4], m4)
AC_PATH_PROG([AUTOM4TE], autom4te)
AC_PATH_PROG([DIFF], diff)
AC_PATH_PROG([OCAMLC], ocamlc)
AC_PATH_PROG([OCAMLOPT], ocamlopt)
AC_PATH_PROG([OCAMLFIND], ocamlfind)
AC_PATH_PROG([XMLLINT], xmllint)
AC_CONFIG_TESTDIR(tests, source)
AC_OUTPUT([Makefile info/Makefile share/Makefile source/Makefile tests/atlocal
           tests/Makefile])
